experiment: try edge function for streaming

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,13 @@
       "use": "@vercel/python"
     }
   ],
+  "functions": {
+    "main.py": {
+      "runtime": "python3.9",
+      "memory": 1024,
+      "maxDuration": 60
+    }
+  },
   "routes": [
     {
       "src": "/(.*)",
